--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,10 @@ github_username:  rachelbunder
 # Build settings
 markdown: kramdown
 theme: minimal-mistakes-jekyll
+remote_theme: "mmistakes/minimal-mistakes"
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
 
 # defaults:
