fixing up _config,yml

--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ naver_site_verification  :
 
 # Social Sharing
 twitter:
-  username               : @ADuckIsMyFiend
+  username               : ADuckIsMyFiend
 facebook:
   username               :
   app_id                 :
