Changed config files

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-au"
-title                    : "Rachel"
+title                    : "Rachel Bunder"
 title_separator          : "|"
 name                     : "Rachel Bunder"
 description              : "A collection of what I've been learning, projects and other thoughts."
