--- a/_config.yml
+++ b/_config.yml
@@ -159,7 +159,7 @@ lsi: false
 excerpt_separator: "\n\n"
 incremental: false
 
-theme: minima
+theme: Minimal
 # remote_theme: "mmistakes/minimal-mistakes"
 
 # Markdown Processing
